@@ -6,8 +6,14 @@ use Module::Install::Catalyst; # Complain loudly if you don't have
                                # Catalyst::Devel installed or haven't said
                                # 'make dist' to create a standalone tarball.
 
-name 'kbase';
-all_from 'lib/kbase.pm';
+name 'Kbase
+columns=
+type=tsv
+';
+all_from 'lib/Kbase
+columns=
+type=tsv
+.pm';
 
 requires 'Catalyst::Runtime' => '5.90006';
 requires 'Catalyst::Plugin::ConfigLoader';
