@@ -1,3 +1,3 @@
 # rename this file to kbase.yml and put a ':' after 'name' if
 # you want to use YAML like in old versions of Catalyst
-name kbase
+name Kbase
