@@ -1,4 +1,7 @@
-package kbase;
+package Kbase
+columns=
+type=tsv
+;
 use Moose;
 use namespace::autoclean;
 
@@ -36,7 +39,10 @@ our $VERSION = '0.01';
 # local deployment.
 
 __PACKAGE__->config(
-    name => 'kbase',
+    name => 'Kbase
+columns=
+type=tsv
+',
     # Disable deprecated behavior needed by old applications
     disable_component_resolution_regex_fallback => 1,
     enable_catalyst_header => 1, # Send X-Catalyst header
@@ -48,7 +54,10 @@ __PACKAGE__->setup();
 
 =head1 NAME
 
-kbase - Catalyst based application
+Kbase
+columns=
+type=tsv
+ - Catalyst based application
 
 =head1 SYNOPSIS
 
@@ -60,7 +69,10 @@ kbase - Catalyst based application
 
 =head1 SEE ALSO
 
-L<kbase::Controller::Root>, L<Catalyst>
+L<Kbase
+columns=
+type=tsv
+::Controller::Root>, L<Catalyst>
 
 =head1 AUTHOR
 
