@@ -3,7 +3,10 @@ use strict;
 use warnings;
 use Test::More;
 
-use Catalyst::Test 'kbase';
+use Catalyst::Test 'Kbase
+columns=
+type=tsv
+';
 
 ok( request('/')->is_success, 'Request should succeed' );
 
