@@ -1,0 +1,11 @@
+use strict;
+use warnings;
+use Test::More;
+use Test::More;
+
+BEGIN { use_ok 'Kbase
+columns=
+type=tsv
+::View::HTML' }
+
+done_testing();
