@@ -1,4 +1,7 @@
-This file documents the revision history for Perl extension kbase.
+This file documents the revision history for Perl extension Kbase
+columns=
+type=tsv
+.
 
 0.01  2011-10-31 23:38:02
         - initial revision, generated by Catalyst
